feat: Inclui tela de vendas ]

--- a/vendas-app/package.json
+++ b/vendas-app/package.json
@@ -16,6 +16,7 @@
     "formik": "^2.4.6",
     "next": "14.2.5",
     "node-sass": "^9.0.0",
+    "primeflex": "^4.0.0",
     "primereact": "^10.9.6",
     "react": "^18",
     "react-dom": "^18",
